parser.output
   0  $accept : %entry% $end

   1  instruction : declaration SEMIC instruction
   2              | expression SEMIC instruction
   3              | LOAD QUOTE IDENT QUOTE SEMIC instruction
   4              | LTD expression SEMIC
   5              | LTC expression SEMIC
   6              | DTC expression SEMIC
   7              | DTL expression SEMIC
   8              | CTL expression SEMIC
   9              | CTD expression SEMIC
  10              | EXIT
  11              | SEMIC
  12              | EOF
  13              | error

  14  declaration : LET IDENT EQUAL expression
  15              | LET REC IDENT EQUAL expression
  16              | erreursLet

  17  expression : simple
  18             | arithmeticExp
  19             | booleanExp
  20             | expression expression
  21             | PO expression PF

  22  simple : IDENT
  23         | IDENT Colon idType
  24         | S
  25         | K
  26         | I
  27         | B
  28         | C
  29         | CINT
  30         | LAMBDA liste POINT expression
  31         | PO couple PF
  32         | L_IF expression L_THEN expression L_ELSE expression
  33         | IF expression THEN expression ELSE expression
  34         | LET IDENT EQUAL expression IN expression
  35         | LET REC IDENT EQUAL expression IN expression
  36         | CO list_exp CF

  37  list_exp :
  38           | expression
  39           | expression SEMIC list_exp

  40  couple : expression VIRGULE expression

  41  liste : IDENT
  42        | liste IDENT

  43  booleanExp : BOOL
  44             | expression OR expression
  45             | expression AND expression
  46             | NOT expression
  47             | expression EQ expression
  48             | expression HIGHERTHAN expression
  49             | expression LESSTHAN expression

  50  arithmeticExp : REAL
  51                | INT
  52                | expression INTPLUS expression
  53                | expression INTMINUS expression
  54                | expression INTMULT expression
  55                | expression INTDIV expression
  56                | expression REALPLUS expression
  57                | expression REALMINUS expression
  58                | expression REALMULT expression
  59                | expression REALDIV expression
  60                | INTMINUS expression
  61                | REALMINUS expression

  62  erreursExp : LAMBDA POINT expression
  63             | LAMBDA expression
  64             | liste POINT expression

  65  erreursLet : LET IDENT EQUAL
  66             | LET IDENT expression
  67             | LET EQUAL expression
  68             | LET REC IDENT EQUAL
  69             | LET REC IDENT expression
  70             | LET REC EQUAL expression

  71  idType : PO idType PF
  72         | idType Arrow idType
  73         | typeName

  74  typeName : OtherTypes

  75  %entry% : '\001' instruction

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . instruction  (75)

	error  shift 3
	CINT  shift 4
	INT  shift 5
	REAL  shift 6
	BOOL  shift 7
	IDENT  shift 8
	EOF  shift 9
	LOAD  shift 10
	LTD  shift 11
	LTC  shift 12
	CTD  shift 13
	CTL  shift 14
	DTL  shift 15
	DTC  shift 16
	S  shift 17
	K  shift 18
	B  shift 19
	I  shift 20
	C  shift 21
	LET  shift 22
	EXIT  shift 23
	LAMBDA  shift 24
	PO  shift 25
	NOT  shift 26
	SEMIC  shift 27
	IF  shift 28
	L_IF  shift 29
	CO  shift 30
	INTMINUS  shift 31
	REALMINUS  shift 32
	.  error

	instruction  goto 33
	declaration  goto 34
	expression  goto 35
	erreursLet  goto 36
	simple  goto 37
	arithmeticExp  goto 38
	booleanExp  goto 39


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	instruction : error .  (13)

	.  reduce 13


state 4
	simple : CINT .  (29)

	.  reduce 29


state 5
	arithmeticExp : INT .  (51)

	.  reduce 51


state 6
	arithmeticExp : REAL .  (50)

	.  reduce 50


state 7
	booleanExp : BOOL .  (43)

	.  reduce 43


state 8
	simple : IDENT .  (22)
	simple : IDENT . Colon idType  (23)

	Colon  shift 40
	CINT  reduce 22
	INT  reduce 22
	REAL  reduce 22
	BOOL  reduce 22
	IDENT  reduce 22
	S  reduce 22
	K  reduce 22
	B  reduce 22
	I  reduce 22
	C  reduce 22
	LET  reduce 22
	LAMBDA  reduce 22
	PO  reduce 22
	AND  reduce 22
	OR  reduce 22
	EQ  reduce 22
	NOT  reduce 22
	PF  reduce 22
	IN  reduce 22
	SEMIC  reduce 22
	IF  reduce 22
	THEN  reduce 22
	ELSE  reduce 22
	L_IF  reduce 22
	L_THEN  reduce 22
	L_ELSE  reduce 22
	CO  reduce 22
	CF  reduce 22
	VIRGULE  reduce 22
	INTPLUS  reduce 22
	INTMINUS  reduce 22
	INTMULT  reduce 22
	INTDIV  reduce 22
	REALPLUS  reduce 22
	REALMINUS  reduce 22
	REALMULT  reduce 22
	REALDIV  reduce 22
	HIGHERTHAN  reduce 22
	LESSTHAN  reduce 22


state 9
	instruction : EOF .  (12)

	.  reduce 12


state 10
	instruction : LOAD . QUOTE IDENT QUOTE SEMIC instruction  (3)

	QUOTE  shift 41
	.  error


state 11
	instruction : LTD . expression SEMIC  (4)

	CINT  shift 4
	INT  shift 5
	REAL  shift 6
	BOOL  shift 7
	IDENT  shift 8
	S  shift 17
	K  shift 18
	B  shift 19
	I  shift 20
	C  shift 21
	LET  shift 42
	LAMBDA  shift 24
	PO  shift 25
	NOT  shift 26
	IF  shift 28
	L_IF  shift 29
	CO  shift 30
	INTMINUS  shift 31
	REALMINUS  shift 32
	.  error

	expression  goto 43
	simple  goto 37
	arithmeticExp  goto 38
	booleanExp  goto 39


state 12
	instruction : LTC . expression SEMIC  (5)

	CINT  shift 4
	INT  shift 5
	REAL  shift 6
	BOOL  shift 7
	IDENT  shift 8
	S  shift 17
	K  shift 18
	B  shift 19
	I  shift 20
	C  shift 21
	LET  shift 42
	LAMBDA  shift 24
	PO  shift 25
	NOT  shift 26
	IF  shift 28
	L_IF  shift 29
	CO  shift 30
	INTMINUS  shift 31
	REALMINUS  shift 32
	.  error

	expression  goto 44
	simple  goto 37
	arithmeticExp  goto 38
	booleanExp  goto 39


state 13
	instruction : CTD . expression SEMIC  (9)

	CINT  shift 4
	INT  shift 5
	REAL  shift 6
	BOOL  shift 7
	IDENT  shift 8
	S  shift 17
	K  shift 18
	B  shift 19
	I  shift 20
	C  shift 21
	LET  shift 42
	LAMBDA  shift 24
	PO  shift 25
	NOT  shift 26
	IF  shift 28
	L_IF  shift 29
	CO  shift 30
	INTMINUS  shift 31
	REALMINUS  shift 32
	.  error

	expression  goto 45
	simple  goto 37
	arithmeticExp  goto 38
	booleanExp  goto 39


state 14
	instruction : CTL . expression SEMIC  (8)

	CINT  shift 4
	INT  shift 5
	REAL  shift 6
	BOOL  shift 7
	IDENT  shift 8
	S  shift 17
	K  shift 18
	B  shift 19
	I  shift 20
	C  shift 21
	LET  shift 42
	LAMBDA  shift 24
	PO  shift 25
	NOT  shift 26
	IF  shift 28
	L_IF  shift 29
	CO  shift 30
	INTMINUS  shift 31
	REALMINUS  shift 32
	.  error

	expression  goto 46
	simple  goto 37
	arithmeticExp  goto 38
	booleanExp  goto 39


state 15
	instruction : DTL . expression SEMIC  (7)

	CINT  shift 4
	INT  shift 5
	REAL  shift 6
	BOOL  shift 7
	IDENT  shift 8
	S  shift 17
	K  shift 18
	B  shift 19
	I  shift 20
	C  shift 21
	LET  shift 42
	LAMBDA  shift 24
	PO  shift 25
	NOT  shift 26
	IF  shift 28
	L_IF  shift 29
	CO  shift 30
	INTMINUS  shift 31
	REALMINUS  shift 32
	.  error

	expression  goto 47
	simple  goto 37
	arithmeticExp  goto 38
	booleanExp  goto 39


state 16
	instruction : DTC . expression SEMIC  (6)

	CINT  shift 4
	INT  shift 5
	REAL  shift 6
	BOOL  shift 7
	IDENT  shift 8
	S  shift 17
	K  shift 18
	B  shift 19
	I  shift 20
	C  shift 21
	LET  shift 42
	LAMBDA  shift 24
	PO  shift 25
	NOT  shift 26
	IF  shift 28
	L_IF  shift 29
	CO  shift 30
	INTMINUS  shift 31
	REALMINUS  shift 32
	.  error

	expression  goto 48
	simple  goto 37
	arithmeticExp  goto 38
	booleanExp  goto 39


state 17
	simple : S .  (24)

	.  reduce 24


state 18
	simple : K .  (25)

	.  reduce 25


state 19
	simple : B .  (27)

	.  reduce 27


state 20
	simple : I .  (26)

	.  reduce 26


state 21
	simple : C .  (28)

	.  reduce 28


state 22
	declaration : LET . IDENT EQUAL expression  (14)
	declaration : LET . REC IDENT EQUAL expression  (15)
	simple : LET . IDENT EQUAL expression IN expression  (34)
	simple : LET . REC IDENT EQUAL expression IN expression  (35)
	erreursLet : LET . IDENT EQUAL  (65)
	erreursLet : LET . IDENT expression  (66)
	erreursLet : LET . EQUAL expression  (67)
	erreursLet : LET . REC IDENT EQUAL  (68)
	erreursLet : LET . REC IDENT expression  (69)
	erreursLet : LET . REC EQUAL expression  (70)

	IDENT  shift 49
	EQUAL  shift 50
	REC  shift 51
	.  error


state 23
	instruction : EXIT .  (10)

	.  reduce 10


state 24
	simple : LAMBDA . liste POINT expression  (30)

	IDENT  shift 52
	.  error

	liste  goto 53


state 25
	expression : PO . expression PF  (21)
	simple : PO . couple PF  (31)

	CINT  shift 4
	INT  shift 5
	REAL  shift 6
	BOOL  shift 7
	IDENT  shift 8
	S  shift 17
	K  shift 18
	B  shift 19
	I  shift 20
	C  shift 21
	LET  shift 42
	LAMBDA  shift 24
	PO  shift 25
	NOT  shift 26
	IF  shift 28
	L_IF  shift 29
	CO  shift 30
	INTMINUS  shift 31
	REALMINUS  shift 32
	.  error

	expression  goto 54
	simple  goto 37
	arithmeticExp  goto 38
	booleanExp  goto 39
	couple  goto 55


state 26
	booleanExp : NOT . expression  (46)

	CINT  shift 4
	INT  shift 5
	REAL  shift 6
	BOOL  shift 7
	IDENT  shift 8
	S  shift 17
	K  shift 18
	B  shift 19
	I  shift 20
	C  shift 21
	LET  shift 42
	LAMBDA  shift 24
	PO  shift 25
	NOT  shift 26
	IF  shift 28
	L_IF  shift 29
	CO  shift 30
	INTMINUS  shift 31
	REALMINUS  shift 32
	.  error

	expression  goto 56
	simple  goto 37
	arithmeticExp  goto 38
	booleanExp  goto 39


state 27
	instruction : SEMIC .  (11)

	.  reduce 11


state 28
	simple : IF . expression THEN expression ELSE expression  (33)

	CINT  shift 4
	INT  shift 5
	REAL  shift 6
	BOOL  shift 7
	IDENT  shift 8
	S  shift 17
	K  shift 18
	B  shift 19
	I  shift 20
	C  shift 21
	LET  shift 42
	LAMBDA  shift 24
	PO  shift 25
	NOT  shift 26
	IF  shift 28
	L_IF  shift 29
	CO  shift 30
	INTMINUS  shift 31
	REALMINUS  shift 32
	.  error

	expression  goto 57
	simple  goto 37
	arithmeticExp  goto 38
	booleanExp  goto 39


state 29
	simple : L_IF . expression L_THEN expression L_ELSE expression  (32)

	CINT  shift 4
	INT  shift 5
	REAL  shift 6
	BOOL  shift 7
	IDENT  shift 8
	S  shift 17
	K  shift 18
	B  shift 19
	I  shift 20
	C  shift 21
	LET  shift 42
	LAMBDA  shift 24
	PO  shift 25
	NOT  shift 26
	IF  shift 28
	L_IF  shift 29
	CO  shift 30
	INTMINUS  shift 31
	REALMINUS  shift 32
	.  error

	expression  goto 58
	simple  goto 37
	arithmeticExp  goto 38
	booleanExp  goto 39


state 30
	simple : CO . list_exp CF  (36)
	list_exp : .  (37)

	CINT  shift 4
	INT  shift 5
	REAL  shift 6
	BOOL  shift 7
	IDENT  shift 8
	S  shift 17
	K  shift 18
	B  shift 19
	I  shift 20
	C  shift 21
	LET  shift 42
	LAMBDA  shift 24
	PO  shift 25
	NOT  shift 26
	IF  shift 28
	L_IF  shift 29
	CO  shift 30
	INTMINUS  shift 31
	REALMINUS  shift 32
	CF  reduce 37

	expression  goto 59
	simple  goto 37
	arithmeticExp  goto 38
	booleanExp  goto 39
	list_exp  goto 60


state 31
	arithmeticExp : INTMINUS . expression  (60)

	CINT  shift 4
	INT  shift 5
	REAL  shift 6
	BOOL  shift 7
	IDENT  shift 8
	S  shift 17
	K  shift 18
	B  shift 19
	I  shift 20
	C  shift 21
	LET  shift 42
	LAMBDA  shift 24
	PO  shift 25
	NOT  shift 26
	IF  shift 28
	L_IF  shift 29
	CO  shift 30
	INTMINUS  shift 31
	REALMINUS  shift 32
	.  error

	expression  goto 61
	simple  goto 37
	arithmeticExp  goto 38
	booleanExp  goto 39


state 32
	arithmeticExp : REALMINUS . expression  (61)

	CINT  shift 4
	INT  shift 5
	REAL  shift 6
	BOOL  shift 7
	IDENT  shift 8
	S  shift 17
	K  shift 18
	B  shift 19
	I  shift 20
	C  shift 21
	LET  shift 42
	LAMBDA  shift 24
	PO  shift 25
	NOT  shift 26
	IF  shift 28
	L_IF  shift 29
	CO  shift 30
	INTMINUS  shift 31
	REALMINUS  shift 32
	.  error

	expression  goto 62
	simple  goto 37
	arithmeticExp  goto 38
	booleanExp  goto 39


state 33
	%entry% : '\001' instruction .  (75)

	.  reduce 75


state 34
	instruction : declaration . SEMIC instruction  (1)

	SEMIC  shift 63
	.  error


state 35
	instruction : expression . SEMIC instruction  (2)
	expression : expression . expression  (20)
	booleanExp : expression . OR expression  (44)
	booleanExp : expression . AND expression  (45)
	booleanExp : expression . EQ expression  (47)
	booleanExp : expression . HIGHERTHAN expression  (48)
	booleanExp : expression . LESSTHAN expression  (49)
	arithmeticExp : expression . INTPLUS expression  (52)
	arithmeticExp : expression . INTMINUS expression  (53)
	arithmeticExp : expression . INTMULT expression  (54)
	arithmeticExp : expression . INTDIV expression  (55)
	arithmeticExp : expression . REALPLUS expression  (56)
	arithmeticExp : expression . REALMINUS expression  (57)
	arithmeticExp : expression . REALMULT expression  (58)
	arithmeticExp : expression . REALDIV expression  (59)

	CINT  shift 4
	INT  shift 5
	REAL  shift 6
	BOOL  shift 7
	IDENT  shift 8
	S  shift 17
	K  shift 18
	B  shift 19
	I  shift 20
	C  shift 21
	LET  shift 42
	LAMBDA  shift 24
	PO  shift 25
	AND  shift 64
	OR  shift 65
	EQ  shift 66
	NOT  shift 26
	SEMIC  shift 67
	IF  shift 28
	L_IF  shift 29
	CO  shift 30
	INTPLUS  shift 68
	INTMINUS  shift 69
	INTMULT  shift 70
	INTDIV  shift 71
	REALPLUS  shift 72
	REALMINUS  shift 73
	REALMULT  shift 74
	REALDIV  shift 75
	HIGHERTHAN  shift 76
	LESSTHAN  shift 77
	.  error

	expression  goto 78
	simple  goto 37
	arithmeticExp  goto 38
	booleanExp  goto 39


state 36
	declaration : erreursLet .  (16)

	.  reduce 16


state 37
	expression : simple .  (17)

	.  reduce 17


state 38
	expression : arithmeticExp .  (18)

	.  reduce 18


state 39
	expression : booleanExp .  (19)

	.  reduce 19


state 40
	simple : IDENT Colon . idType  (23)

	OtherTypes  shift 79
	PO  shift 80
	.  error

	idType  goto 81
	typeName  goto 82


state 41
	instruction : LOAD QUOTE . IDENT QUOTE SEMIC instruction  (3)

	IDENT  shift 83
	.  error


state 42
	simple : LET . IDENT EQUAL expression IN expression  (34)
	simple : LET . REC IDENT EQUAL expression IN expression  (35)

	IDENT  shift 84
	REC  shift 85
	.  error


state 43
	instruction : LTD expression . SEMIC  (4)
	expression : expression . expression  (20)
	booleanExp : expression . OR expression  (44)
	booleanExp : expression . AND expression  (45)
	booleanExp : expression . EQ expression  (47)
	booleanExp : expression . HIGHERTHAN expression  (48)
	booleanExp : expression . LESSTHAN expression  (49)
	arithmeticExp : expression . INTPLUS expression  (52)
	arithmeticExp : expression . INTMINUS expression  (53)
	arithmeticExp : expression . INTMULT expression  (54)
	arithmeticExp : expression . INTDIV expression  (55)
	arithmeticExp : expression . REALPLUS expression  (56)
	arithmeticExp : expression . REALMINUS expression  (57)
	arithmeticExp : expression . REALMULT expression  (58)
	arithmeticExp : expression . REALDIV expression  (59)

	CINT  shift 4
	INT  shift 5
	REAL  shift 6
	BOOL  shift 7
	IDENT  shift 8
	S  shift 17
	K  shift 18
	B  shift 19
	I  shift 20
	C  shift 21
	LET  shift 42
	LAMBDA  shift 24
	PO  shift 25
	AND  shift 64
	OR  shift 65
	EQ  shift 66
	NOT  shift 26
	SEMIC  shift 86
	IF  shift 28
	L_IF  shift 29
	CO  shift 30
	INTPLUS  shift 68
	INTMINUS  shift 69
	INTMULT  shift 70
	INTDIV  shift 71
	REALPLUS  shift 72
	REALMINUS  shift 73
	REALMULT  shift 74
	REALDIV  shift 75
	HIGHERTHAN  shift 76
	LESSTHAN  shift 77
	.  error

	expression  goto 78
	simple  goto 37
	arithmeticExp  goto 38
	booleanExp  goto 39


state 44
	instruction : LTC expression . SEMIC  (5)
	expression : expression . expression  (20)
	booleanExp : expression . OR expression  (44)
	booleanExp : expression . AND expression  (45)
	booleanExp : expression . EQ expression  (47)
	booleanExp : expression . HIGHERTHAN expression  (48)
	booleanExp : expression . LESSTHAN expression  (49)
	arithmeticExp : expression . INTPLUS expression  (52)
	arithmeticExp : expression . INTMINUS expression  (53)
	arithmeticExp : expression . INTMULT expression  (54)
	arithmeticExp : expression . INTDIV expression  (55)
	arithmeticExp : expression . REALPLUS expression  (56)
	arithmeticExp : expression . REALMINUS expression  (57)
	arithmeticExp : expression . REALMULT expression  (58)
	arithmeticExp : expression . REALDIV expression  (59)

	CINT  shift 4
	INT  shift 5
	REAL  shift 6
	BOOL  shift 7
	IDENT  shift 8
	S  shift 17
	K  shift 18
	B  shift 19
	I  shift 20
	C  shift 21
	LET  shift 42
	LAMBDA  shift 24
	PO  shift 25
	AND  shift 64
	OR  shift 65
	EQ  shift 66
	NOT  shift 26
	SEMIC  shift 87
	IF  shift 28
	L_IF  shift 29
	CO  shift 30
	INTPLUS  shift 68
	INTMINUS  shift 69
	INTMULT  shift 70
	INTDIV  shift 71
	REALPLUS  shift 72
	REALMINUS  shift 73
	REALMULT  shift 74
	REALDIV  shift 75
	HIGHERTHAN  shift 76
	LESSTHAN  shift 77
	.  error

	expression  goto 78
	simple  goto 37
	arithmeticExp  goto 38
	booleanExp  goto 39


state 45
	instruction : CTD expression . SEMIC  (9)
	expression : expression . expression  (20)
	booleanExp : expression . OR expression  (44)
	booleanExp : expression . AND expression  (45)
	booleanExp : expression . EQ expression  (47)
	booleanExp : expression . HIGHERTHAN expression  (48)
	booleanExp : expression . LESSTHAN expression  (49)
	arithmeticExp : expression . INTPLUS expression  (52)
	arithmeticExp : expression . INTMINUS expression  (53)
	arithmeticExp : expression . INTMULT expression  (54)
	arithmeticExp : expression . INTDIV expression  (55)
	arithmeticExp : expression . REALPLUS expression  (56)
	arithmeticExp : expression . REALMINUS expression  (57)
	arithmeticExp : expression . REALMULT expression  (58)
	arithmeticExp : expression . REALDIV expression  (59)

	CINT  shift 4
	INT  shift 5
	REAL  shift 6
	BOOL  shift 7
	IDENT  shift 8
	S  shift 17
	K  shift 18
	B  shift 19
	I  shift 20
	C  shift 21
	LET  shift 42
	LAMBDA  shift 24
	PO  shift 25
	AND  shift 64
	OR  shift 65
	EQ  shift 66
	NOT  shift 26
	SEMIC  shift 88
	IF  shift 28
	L_IF  shift 29
	CO  shift 30
	INTPLUS  shift 68
	INTMINUS  shift 69
	INTMULT  shift 70
	INTDIV  shift 71
	REALPLUS  shift 72
	REALMINUS  shift 73
	REALMULT  shift 74
	REALDIV  shift 75
	HIGHERTHAN  shift 76
	LESSTHAN  shift 77
	.  error

	expression  goto 78
	simple  goto 37
	arithmeticExp  goto 38
	booleanExp  goto 39


state 46
	instruction : CTL expression . SEMIC  (8)
	expression : expression . expression  (20)
	booleanExp : expression . OR expression  (44)
	booleanExp : expression . AND expression  (45)
	booleanExp : expression . EQ expression  (47)
	booleanExp : expression . HIGHERTHAN expression  (48)
	booleanExp : expression . LESSTHAN expression  (49)
	arithmeticExp : expression . INTPLUS expression  (52)
	arithmeticExp : expression . INTMINUS expression  (53)
	arithmeticExp : expression . INTMULT expression  (54)
	arithmeticExp : expression . INTDIV expression  (55)
	arithmeticExp : expression . REALPLUS expression  (56)
	arithmeticExp : expression . REALMINUS expression  (57)
	arithmeticExp : expression . REALMULT expression  (58)
	arithmeticExp : expression . REALDIV expression  (59)
